--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -105,6 +105,32 @@ Should make startup faster, taken from doom-emacs
   (require 'use-package)
   (setq use-package-always-ensure t)
 #+end_src
+* Straight.el 
+We only enable Straight.el for anything other than NixOS
+Cause emacs overlay lol
+#+begin_src emacs-lisp
+  ;; TODO Test this one darwin someday
+  (when (eq system-type 'windows-nt)
+    (defvar bootstrap-version)
+    (let ((bootstrap-file
+           (expand-file-name
+            "straight/repos/straight.el/bootstrap.el"
+            (or (bound-and-true-p straight-base-dir)
+                user-emacs-directory)))
+          (bootstrap-version 7))
+      (unless (file-exists-p bootstrap-file)
+        (with-current-buffer
+            (url-retrieve-synchronously
+             "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
+             'silent 'inhibit-cookies)
+          (goto-char (point-max))
+          (eval-print-last-sexp)))
+      (load bootstrap-file nil 'nomessage))
+    (use-package straight
+      :custom
+      (straight-use-package-by-default t))
+    )
+#+end_src
 * SPEED SPEED SPEED SPEED
 ** Avoid Garbage Collection at startup
 #+begin_src emacs-lisp
