--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -356,25 +356,29 @@ Cause emacs overlay lol
 #+end_src
 ** Custom Themes
 #+begin_src emacs-lisp
-  ;; (use-package doom-themes
-  ;; :ensure t
-  ;; :config
-  ;; ;; Global settings (defaults)
-  ;; (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-  ;;       doom-themes-enable-italic t) ; if nil, italics is universally disabled
-  ;; ;; load the theme
-  ;; (load-theme 'doom-monokai-pro t)
+      ;; (use-package doom-themes
+      ;; :ensure t
+      ;; :config
+      ;; ;; Global settings (defaults)
+      ;; (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+      ;;       doom-themes-enable-italic t) ; if nil, italics is universally disabled
+      ;; ;; load the theme
+      ;; (load-theme 'doom-monokai-pro t)
 
-  ;; (doom-themes-org-config)
+      ;; (doom-themes-org-config)
 
-  ;; (doom-themes-treemacs-config)
+      ;; (doom-themes-treemacs-config)
 
-  ;; ;; Enable flashing mode-line on errors
-  ;; (doom-themes-visual-bell-config))
+      ;; ;; Enable flashing mode-line on errors
+      ;; (doom-themes-visual-bell-config))
 
-  (use-package timu-macos-theme 
-    :config
-  (load-theme 'timu-macos t))
+      ;; (use-package timu-macos-theme 
+      ;;   :config
+      ;; (load-theme 'timu-macos t))
+
+      (use-package melancholy-theme
+        :config
+        (load-theme 'melancholy-theme))
 
 #+end_src
 ** All the Icons (to make doom-themes happy)
