just gonna do that

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -126,10 +126,7 @@ Cause emacs overlay lol
           (goto-char (point-max))
           (eval-print-last-sexp)))
       (load bootstrap-file nil 'nomessage))
-    (use-package straight
-      :custom
-      (straight-use-package-by-default t))
-    )
+    (setq straight-use-package-by-default t)
 #+end_src
 * SPEED SPEED SPEED SPEED
 ** Avoid Garbage Collection at startup
