--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -364,7 +364,7 @@ Cause emacs overlay lol
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   ;; load the theme
-  (load-theme 'doom-vibrant)
+  (load-theme 'doom-vibrant t)
 
   (doom-themes-org-config)
 
