--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -160,9 +160,9 @@ Cause emacs overlay lol
   (add-hook 'emacs-startup-hook
             (lambda ()
               ;;(setq gc-cons-threshold 16777216 ; 16mb
-  	    ;; this could be really bad idk
-  	    (setq gc-cons-threshold 100000000
-                    gc-cons-percentage 0.1)))
+            ;; this could be really bad idk
+            (setq gc-cons-threshold 100000000
+                    gc-cons-percentage 0.1))))
 #+end_src
 ** Don't use GC when minibuffer is used 
 #+begin_src emacs-lisp
@@ -1309,6 +1309,60 @@ Aint no way bro
 #+begin_src emacs-lisp
 (use-package docker
   :bind ("C-c d" . docker))
+#+end_src
+** EXWM
+RELEASE ME
+#+begin_src emacs-lisp
+    (when (eq system-type 'gnu/linux)
+      (use-package exwm
+        :config
+        ;; workspaces
+        (setq exwm-workspace-number 5)
+
+        ;; always use these keys in emacs
+        (setq exwm-input-prefix-keys
+              '(?\C-x
+                ?\C-u
+                ?\C-h
+                ?\M-x
+                ?\M-`
+                ?\M-&
+                ?\M-:
+                ?\C-\M-j  ;; Buffer list
+                ?\C-\ ))  ;; Ctrl+Space
+
+        ;; Ctrl+Q will enable the next key to be sent directly
+        (define-key exwm-mode-map [?\C-q] 'exwm-input-send-next-key)
+        ;; Set up global key bindings.  These always work, no matter the input state!
+        ;; Keep in mind that changing this list after EXWM initializes has no effect.
+        (setq exwm-input-global-keys
+              `(
+                ;; Reset to line-mode (C-c C-k switches to char-mode via exwm-input-release-keyboard)
+                ([?\s-r] . exwm-reset)
+
+                ;; Move between windows
+                ([s-left] . windmove-left)
+                ([s-right] . windmove-right)
+                ([s-up] . windmove-up)
+                ([s-down] . windmove-down)
+
+                ;; Launch applications via shell command
+                ([?\s-&] . (lambda (command)
+                             (interactive (list (read-shell-command "$ ")))
+                             (start-process-shell-command command nil command)))
+
+                ;; Switch workspace
+                ([?\s-w] . exwm-workspace-switch)
+
+                ;; 's-N': Switch to certain workspace with Super (Win) plus a number key (0 - 9)
+                ,@(mapcar (lambda (i)
+                            `(,(kbd (format "s-%d" i)) .
+                              (lambda ()
+                                (interactive)
+                                (exwm-workspace-switch-create ,i))))
+                          (number-sequence 0 9))))
+        ))
+
 #+end_src
 * Org Mode Configuration Setup
 ** Babel Languages
